--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-#cake {
+.cake {
   display: block;
   margin: 0 auto;
   background: #fff8f0;
@@ -31,7 +31,7 @@ h1 {
   box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 
-#confetti {
+.confetti {
   position: fixed;
   top: 0;
   left: 0;
